# cepa-preview

./: .gitignore  README.md  Sistema CEPA.html  render.yaml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/agendamiento/: enums.py  models.py  router.py  scheduler.py  schemas.py  service.py
backend/app/audit/: service.py
backend/app/auth/: deps.py  jwt.py  security.py  service.py
backend/app/db/: base.py  session.py  types.py
backend/app/domain/: enums.py  enums_alertas.py  enums_controles.py  enums_ept.py  enums_licencia.py  reintegro_enums.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  alertas.py  (+22 more)
backend/migrations/: env.py
backend/tests/: conftest.py  conftest_ept.py  test_adherencia.py  test_alertas_api.py  test_alertas_engine.py  test_alertas_integracion.py  test_alertas_migration.py  test_alertas_model.py  test_audit_log_api.py  test_audit_log_inmutable.py  test_audit_log_model.py  test_audit_log_query_api.py  test_audit_service.py  test_auditoria_api.py  test_auditoria_fixes.py  test_auditoria_schemas.py  test_auditoria_service.py  test_auth_api.py  test_auth_deps.py  test_auth_jwt.py  test_auth_security.py  test_auth_service_login.py  test_busqueda_api.py  test_cierre_api.py  test_citas_dd1.py  test_config.py  test_config_auth.py  test_consentimiento_api.py  test_consentimiento_model.py  test_control_medico_api.py  test_control_medico_model.py  test_cors.py  test_dashboard.py  test_domain_enums.py  test_domain_enums_ept.py  test_email_sender.py  test_enums_controles.py  test_enums_licencia.py  test_ept_caso_api.py  test_ept_models.py  (+68 more)
(+354 files in other folders)
