[project]
name = "cepa-backend"
version = "0.1.0"
description = "Backend del Sistema CEPA (FastAPI, portable Oracle/Postgres)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "psycopg[binary]>=3.2",
    "oracledb>=2.2",
    "pyjwt>=2.9",
    "pwdlib[argon2]>=0.2.1",
    "email-validator>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "rendimiento: pruebas de rendimiento con volúmenes reales (excluidas del CI rápido)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
